<resources>
    <string name="app_name">OnJasa</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ac_maintenance_icon">AC Maintenance Icon</string>
    <string name="ac_wash_icon">AC Wash Icon</string>
    <string name="ac_installation_icon">AC Installation Icon</string>
    <string name="ac_installation">AC Installation</string>
    <string name="ac_maintenance">AC Maintenance</string>
    <string name="ac_wash">AC Wash</string>
    <string name="ac_repair">AC Repair</string>
    <string name="ac_repair_icon">AC Repair Icon</string>
    <string name="are_you_looking_for">are you looking for?</string>
    <string name="what_service">what service</string>
    <string name="notification">Notification</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="jl_bromo_no_171_medan_denai">Jl. Bromo No. 171, Medan Denai</string>
    <string name="el_galungskie">El Galungskie</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
    <string name="make_order">Make Order</string>
    <string name="service_icon">Service icon</string>
    <string name="back_button">Back button</string>
    <string name="service_process_image">Service process image</string>
    <string name="medan">Medan</string>
    <string name="raden_warren_buffet">Raden Warren Buffet</string>
    <string name="jl_negro_kusuma_no_69ah_medan_petisah">JL. Negro Kusuma No.69AH, Medan Petisah</string>
    <string name="your_activity">Your Activity</string>
    <string name="ongoing">Ongoing</string>
    <string name="history">History</string>
    <string name="prefrence">Prefrence</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="uk_el_besok">UK El Besok</string>
    <string name="profile">Profile</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>
    <string name="rp20000">Rp20000</string>
    <string name="galungskie">Galungskie</string>
    <string name="cancel">Cancel</string>
    <string name="choose_payment_method">Choose payment method</string>
    <string name="payment">payment</string>
    <string name="membantu_kamu_dalam_menyediakan_layanan_ac_terpercaya">Membantu kamu dalam menyediakan Layanan AC Terpercaya</string>
    <string name="get_started">Get Started</string>
    <string name="waiting_technician_approve">Waiting technician approve...</string>
    <string name="_05_00">05:00</string>
    <string name="rp_25_000">Rp.25.000</string>
    <string name="raden_warren">Raden Warren</string>
    <string name="back_to_home">Back To Home</string>
    <string name="loading_order">Loading Order</string>
    <string name="haven_t_an_account_sign_up">Haven\'t an account? Sign Up</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="sign_in">Sign in</string>
    <string name="have_an_account_sign_in">Have an account? Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="today_11_30_am">Today, 11:30 AM</string>
    <string name="rp120_000">Rp120.000</string>
    <string name="dana">DANA</string>
    <string name="galniga">GalNiga</string>
    <string name="rp_20_000">Rp 20.000</string>
    <string name="on_the_way_to_your_house">On the way to your house</string>
    <string name="_04_35_pm">04.35 pm</string>
    <string name="call">Call</string>
    <string name="chat">Chat</string>
    <string name="bayar">Bayar</string>
</resources>