<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <!-- Profile Picture -->
    <ImageView
        android:id="@+id/profile_picture"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/whatsapp_image_2024_09_26_at_21_00_37_b3e1e39d"
        android:background="@drawable/circular_image"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:clipToOutline="true"
        android:contentDescription="@string/profile_picture" />

    <!-- Notification Icon -->
    <ImageView
        android:id="@+id/notification"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:src="@drawable/notification"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/notification" />

    <!-- Title -->
    <TextView
        android:id="@+id/service_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/what_service"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/profile_picture"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/service_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/are_you_looking_for"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/service_title"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp" />

    <!-- CardView Templates -->
    <androidx.cardview.widget.CardView
        android:id="@+id/ac_repair_card"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardBackgroundColor="@color/orangemuda"
        app:cardCornerRadius="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="50dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintWidth_percent="0.35"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/service_subtitle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:contentDescription="@string/ac_repair_icon"
                android:src="@drawable/maintenance_tools" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/ac_repair"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:gravity="center" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/ac_installation_card"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardBackgroundColor="@color/ungujanda"
        app:cardCornerRadius="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintWidth_percent="0.35"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toBottomOf="@id/service_subtitle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:contentDescription="@string/ac_installation_icon"
                android:src="@drawable/easy_installation" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/ac_installation"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:gravity="center" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/ac_maintenance_card"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardBackgroundColor="@color/biru"
        app:cardCornerRadius="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintWidth_percent="0.35"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ac_repair_card">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:contentDescription="@string/ac_maintenance_icon"
                android:src="@drawable/ac" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/ac_maintenance"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:gravity="center" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/ac_wash_card"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        app:cardBackgroundColor="@color/orange"
        app:cardCornerRadius="16dp"
        app:layout_constraintWidth_percent="0.35"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toBottomOf="@id/ac_installation_card">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:contentDescription="@string/ac_wash_icon"
                android:src="@drawable/spray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/ac_wash"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:gravity="center" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- Bottom Navigation View -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:paddingTop="8dp"
        app:itemIconSize="30dp"
        app:itemIconTint="@color/black"
        app:itemTextColor="@android:color/transparent"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_navigation_menu" />
</androidx.constraintlayout.widget.ConstraintLayout>
