<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    android:layout_marginHorizontal="20dp"
    android:layout_marginVertical="8dp"
    app:cardBackgroundColor="@color/ungujanda">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">


        <ImageView
            android:id="@+id/ivIcon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/ac_repair_icon"
            android:src="@drawable/easy_installation__1_"
            android:layout_gravity="center_vertical" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginStart="16dp">

            <TextView
                android:id="@+id/tvOrderTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ac_repair"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@android:color/black"/>

            <TextView
                android:id="@+id/tvOrderTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/today_11_30_am"
                android:textSize="16sp"
                android:textColor="@android:color/black"/>
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
